# xuhua

./: .env.example  .gitignore  README.md  app.py  findings.md  progress.md  pyproject.toml  requirements-dev.txt  requirements.txt  task_plan.md
data/processed/: ai_fields.json
docs/: ai_roadmap.md  design_overview.md  design_pinyin_transform.md
docs/superpowers/plans/: 2026-05-12-xuhua-comprehensive-refactor.md  2026-05-13-bilingual-communication.md
docs/superpowers/specs/: 2026-05-12-xuhua-comprehensive-refactor-design.md  2026-05-13-bilingual-communication-design.md
scripts/: audit_dataset.py  build_dataset.py  build_dataset_v3_jsonl.py  build_embeddings.ps1  build_embeddings.py  fix_summaries.py  import_ihchina_projects.py  migrate_dataset.py  normalize_dataset.py
scripts/maintenance/: rebuild_embedding_index.ps1  rebuild_embedding_index.py
src/heritage_explorer/: __init__.py  agent.py  agent_comparison.py  agent_models.py  agent_task_config.py  ai.py  config.py  conversation.py  dataset.py  embeddings.py  extractor.py  http_client.py  item_cards.py  retriever.py  scenario_evidence.py  search.py  transform_config.py  volc_tts.py  web.py
src/heritage_explorer/agent/: __init__.py  planner.py
src/heritage_explorer/ai/: __init__.py  client.py  qa.py  (+3 more)
static/: app.js  styles.css
static/js/: ask.js  consts.js  human.js  main.js  markdown.js  search.js  speech.js  state.js  ui.js
templates/: exhibition_plan.md.j2  index.html  study_task.md.j2  transform_local.md.j2
tests/: conftest.py  test_agent.py  test_ai.py  test_bilingual.py  test_dataset.py  test_dataset_v3_jsonl.py  test_embeddings.py  test_extractor.py  test_http_client.py  test_planner.py  test_retriever.py  test_search.py  test_volc_tts.py  test_web.py
(+1 files in other folders)
