[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mudan-heritage-explorer"
version = "0.1.0"
description = "A clean local knowledge-base system for Chinese intangible cultural heritage data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0,<4",
    "zhipuai>=2.1,<3",
]

[project.scripts]
heritage-explorer = "heritage_explorer.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
