[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xuhua"
version = "0.1.0"
description = "叙华 — 面向牡丹非遗资料的本地 Web 知识库与 AI 问答系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0,<4",
    "zhipuai>=2.1,<3",
    "sniffio>=1.3,<2",
]

[project.scripts]
xuhua = "heritage_explorer.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
